[package]
name = "rustysnout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bandwhich = "0.22.2"
chrono = "0.4.37"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
pnet = "0.34.0"
regex = "1.10.4"
rusqlite = "0.31.0"
sysinfo = "0.30.8"
