[package]
name = "rustysnout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bandwhich = "0.22.2"
chrono = "0.4.37"
net = "0.0.0"
pnet = "0.34.0"
procfs = "0.16.0"
regex = "1.10.4"
rusqlite = "0.31.0"
sysinfo = "0.30.8"
