[package]
name = "rustysnout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
bandwhich = "0.22.2"
chrono = "0.4.37"
clap = "4.5.4"
derivative = "2.2.0"
ipnetwork = "0.20.0"
itertools = "0.12.1"
net = "0.0.0"
pnet = "0.34.0"
procfs = "0.16.0"
regex = "1.10.4"
rusqlite = "0.31.0"
strum = { version = "0.26.2", features = ["derive"] }
sysinfo = "0.30.8"
thiserror = "1.0.59"
tokio = "1.37.0"
trust-dns-resolver = "0.23.2"
