[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [] }
anyhow = "1.0.82"
async-trait = "0.1.80"
bandwhich = "0.22.2"
chrono = "0.4.37"
clap = "4.5.4"
derivative = "2.2.0"
ipnetwork = "0.20.0"
itertools = "0.12.1"
pnet = "0.34.0"
procfs = "0.16.0"
regex = "1.10.4"
rusqlite = "0.31.0"
strum = { version = "0.26.2", features = ["derive"] }
sysinfo = "0.30.8"
thiserror = "1.0.59"
tokio = "1.37.0"
trust-dns-resolver = "0.23.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
